<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    tools:context=".Activity_Menu_Principal">

    <!-- Título del menú principal -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/contendor_general"
        android:gravity="center"
        android:text="@string/main_menu_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inventoryLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <!-- Imagen y botón de Productos -->
    <LinearLayout
        android:id="@+id/productsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/inventoryLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/imgProducts"
            android:layout_width="126dp"
            android:layout_height="159dp"
            android:contentDescription="@string/products_image_desc"
            android:src="@drawable/agua" />

        <Button
            android:id="@+id/btnProducts"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="ingre_producto"
            android:text="@string/products" />
    </LinearLayout>

    <!-- Imagen y botón de Inventario -->
    <LinearLayout
        android:id="@+id/inventoryLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="34dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/reportsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/productsLayout"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <ImageView
            android:id="@+id/imgInventory"
            android:layout_width="129dp"
            android:layout_height="158dp"
            android:contentDescription="@string/inventory_image_desc"
            android:src="@drawable/inventario" />

        <Button
            android:id="@+id/btnInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ingreso_inventario"
            android:text="@string/inventory" />
    </LinearLayout>

    <!-- Imagen y botón de Clientes -->
    <LinearLayout
        android:id="@+id/clientsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productsLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/reportsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsLayout">

        <ImageView
            android:id="@+id/imgClients"
            android:layout_width="130dp"
            android:layout_height="167dp"
            android:contentDescription="@string/clients_image_desc"
            android:src="@drawable/venta" />

        <Button
            android:id="@+id/btnVentas"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="realizar_venta"
            android:text="@string/venta" />
    </LinearLayout>

    <!-- Imagen y botón de Reportes -->
    <LinearLayout
        android:id="@+id/reportsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inventoryLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="51dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clientsLayout"
        app:layout_constraintTop_toBottomOf="@+id/inventoryLayout">

        <ImageView
            android:id="@+id/imgReports"
            android:layout_width="134dp"
            android:layout_height="170dp"
            android:contentDescription="@string/reports_image_desc"
            android:src="@drawable/reporte" />

        <Button
            android:id="@+id/btnReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ingreso_reportes"
            android:text="@string/reports" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="cerrar_sesion"
        android:text="@string/cerra_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
