<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_registrarProducto">

    <!-- Fondo de pantalla -->
    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fondo_general"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Contenedor principal con fondo semi-transparente -->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="17dp"
        android:autofillHints=""
        android:background="#2FFFFFFF"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Título de Registro de Producto -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/registro_producto"
            android:textColor="@color/blanco"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Campo de Nombre del Producto -->
        <EditText
            android:id="@+id/etNombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/nombre_producto"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#5C5454"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Campo de Capacidad del Producto -->
        <EditText
            android:id="@+id/etCapacidadProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:hint="@string/capacidad_producto"
            android:inputType="number"
            android:padding="12dp"
            android:textColorHint="#5C5454"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Campo de Unidad de Capacidad del Producto -->
        <Spinner
            android:id="@+id/spinnerUnidad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:entries="@array/unidad_medida_array" />

        <!-- Campo de Precio del Producto -->
        <EditText
            android:id="@+id/etPrecioProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/precio_producto"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textColorHint="#5C5454"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Campo de Descripción del Producto -->
        <EditText
            android:id="@+id/etDescripcionProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/descripcion_producto"
            android:inputType="text|textMultiLine"
            android:padding="12dp"
            android:textColorHint="#5C5454"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <!-- Campo para visualizar la imagen subida -->
        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="321dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:background="#E0E0E0"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <!-- Botón para subir imagen -->
        <Button
            android:id="@+id/btnSubirImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/azul"
            android:text="@string/btn_subir_imagen"
            android:textColor="#212121"
            app:cornerRadius="5dp"
            tools:ignore="ButtonStyle" />

        <!-- Botones de Registrar y Cancelar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/azul"
                android:text="@string/btn_registrar"
                android:textColor="#212121"
                app:cornerRadius="5dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rojo"
                android:onClick="salir_registro"
                android:text="@string/btn_cancelar"
                android:textColor="#000000"
                app:cornerRadius="5dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
